--- a/src/components/Courses/Courses.css
+++ b/src/components/Courses/Courses.css
@@ -11,6 +11,7 @@
   transform: translate(-50%, -50%);
   z-index: 2;
   overflow-y: auto;
+  overflow-x: hidden;
   padding: clamp(15px, 3vw, 30px);
   box-sizing: border-box;
   scrollbar-width: none;
@@ -37,15 +38,6 @@
   height: auto;
   object-fit: contain;
 }
-/* 
-.courses .course-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  width: 90%;
-  max-width: 800px;
-  margin: 20px auto;
-} */
 
 .courses h2 {
   font-size: clamp(16px, 2.5vw, 20px);
